--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Traceablility Lab</title>
 </head>
 <body>
-    
+    <h1>Whats popping? Brand New wipe just hoped in. I got options I can pass that bitch like Stockten.</h1>
 </body>
 </html>
