--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel ="stylesheet" href="/style">
     <title>Traceablility Lab</title>
+    <link rel="stylesheet" href="/style">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
 </head>
 <body>
-    <h1>Whats popping? Brand New wipe just hoped in. I got options I can pass that bitch like Stockten.</h1>
+    <h1>Soda/Energy Drinks</h1>
+    <form>
+        <input type="text" placeholder="Type name here"/>
+        <button>Add Soda/Energy Drink</button>
+    </form>
+    <section></section>
+    <script>
+        const addForm = document.querySelector('form')
+        const nameInput = document.querySelector('input')
+        const container = document.querySelector('section')
+
+        function submitHandler(e){
+            e.preventDefault()
+            axios.post('/api/drink', {name: nameInput.value, })
+                .then(res => {
+                    container.innerHTML = ''
+                    nameInput.value = ''
+
+                    res.data.forEach(studentName => {
+                        container.innerHTML += `<p>${drinkName}</p>`
+                    })
+                })
+                .catch(err => {
+                    nameInput.value = ''
+
+                    const notif = document.createElement('aside')
+                    notif.innerHTML = `<p>${err.response.data}</p>
+                    <button class='close'>close</button>`
+                    document.body.appendChild(notif)
+
+                    document.querySelectorAll('.close').forEach(btn => {
+                        btn.addEventListener('click', (e)=>{
+                            e.target.parentNode.remove()
+                        })
+                    })
+                })
+        }
+
+        addForm.addEventListener('submit', submitHandler)
+    </script>
 </body>
 </html>
